Fixed text alignment in table items, cleanup
Also a name change. Going to make a new icon later too.

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -32,14 +32,3 @@
   font-weight: 600;
   font-size: 17px;
 }
-
-#header h1 {
-  border-radius: 10px;
-  border-color: black;
-}
-
-.logo {
-  width: 256px;
-  height: 256px;
-  top: -50px;
-}
